<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_view">View</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="first_str">First string</string>
    <string name="edit_message">Edit message</string>
    <string name="add_post">Add post</string>
    <string name="description_post_save">Save</string>
    <string name="chooser_share_post">Share post</string>
    <string name="chooser_video_player">Choos video player</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_test_push">We have message: %1$s for user %2$s\' :-)</string>
    <string name="notification_new_post">%1$s posted a new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_unknow">Unknown type notification: %1$s</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="newer_Button">"New posts: "</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="auth_name">User Name</string>
    <string name="auth_pass">Password</string>
    <string name="auth_bclear">Reset</string>
    <string name="auth_bsignin">Sign In</string>
    <string name="error_log_in">Error login or password</string>
    <string name="error_signin">Authorisation Error. Try again later</string>
    <string name="post_illustration">illustration for post</string>
</resources>